--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,9 +22,9 @@
 					<h2>Registration Form</h2>
 					<div class="form-group">
 						<div class="col-sm-9">
-						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+						<label th:if="${#fields.hasErrors('uNumber')}" th:errors="*{uNumber}"
 								class="validation-message"></label>
-						<input type="text" th:field="*{name}" placeholder="Name"
+						<input type="text" th:field="*{uNumber}" placeholder="U-Number"
 								class="form-control" /> 
 						</div>
 					</div>
@@ -35,6 +35,14 @@
 								class="validation-message"></label>
 							<input type="text" th:field="*{lastName}"
 								placeholder="Last Name" class="form-control" /> 
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-9">
+						<label	th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
+								class="validation-message"></label>
+							<input type="text" th:field="*{firstName}"
+								placeholder="First Name" class="form-control" /> 
 						</div>
 					</div>
 					<div class="form-group">
